--- a/Baobab/Baobab_script.html
+++ b/Baobab/Baobab_script.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link show active" data-toggle="tab"
+        <a class="nav-link active" data-toggle="tab"
            href="#inScript">Скрипт входящего звонка</a>
     </li>
     <li class="nav-item">
@@ -13,7 +13,7 @@
     </li>
 </ul>
 <div class="tab-content">
-    <div class="tab-pane fade  active show" id="inScript">
+    <div class="tab-pane fade active show" id="inScript">
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
@@ -338,3 +338,4 @@
         </table>
     </div>
 </div>
+
