--- a/Baobab/Baobab_script.html
+++ b/Baobab/Baobab_script.html
@@ -1,37 +1,4 @@
 <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#panel1">Панель 1</a></li>
-    <li><a data-toggle="tab" href="#panel2">Панель 2</a></li>
-    <li class="dropdown">
-        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-            Другие панели
-            <b class="caret"></b>
-        </a>
-        <ul class="dropdown-menu">
-            <li><a data-toggle="tab" href="#panel3">Панель 3</a></li>
-            <li><a data-toggle="tab" href="#panel4">Панель 4</a></li>
-        </ul>
-    </li>
-</ul>
-
-<div class="tab-content">
-    <div id="panel1" class="tab-pane fade in active">
-        <h3>Панель 1</h3>
-        <p>Содержимое 1 панели...</p>
-    </div>
-    <div id="panel2" class="tab-pane fade">
-        <h3>Панель 2</h3>
-        <p>Содержимое 2 панели...</p>
-    </div>
-    <div id="panel3" class="tab-pane fade">
-        <h3>Панель 3</h3>
-        <p>Содержимое 3 панели...</p>
-    </div>
-    <div id="panel4" class="tab-pane fade">
-        <h3>Панель 4</h3>
-        <p>Содержимое 4 панели...</p>
-    </div>
-</div>
-<ul class="nav nav-tabs">
     <li class="active">
         <a class="nav-link active" data-toggle="tab"
            href="#inScript">Скрипт входящего звонка</a>
@@ -46,7 +13,7 @@
     </li>
 </ul>
 <div class="tab-content">
-    <div class="tab-pane fade active show" id="inScript">
+    <div class="tab-pane fade in active" id="inScript">
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
