--- a/Baobab/Baobab_script.html
+++ b/Baobab/Baobab_script.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-tabs">
-    <li class="active">
+    <li class="active bg-light">
         <a class="nav-link active" data-toggle="tab"
-           href="#inScript">Скрипт входящего звонка</a>
+           href="#inScript"><h4><b>Скрипт входящего звонка</b></h4></a>
     </li>
     <li>
         <a class="nav-link" data-toggle="tab"
