--- a/Baobab/Baobab_script.html
+++ b/Baobab/Baobab_script.html
@@ -5,11 +5,11 @@
     </li>
     <li>
         <a class="nav-link" data-toggle="tab"
-           href="#exceptions">Возражения</a>
+           href="#exceptions"><h4><b>Возражения</b></h4></a>
     </li>
     <li>
         <a class="nav-link" data-toggle="tab"
-           href="#questions">Часто задаваемые вопросы</a>
+           href="#questions"><h4><b>Часто задаваемые вопросы</b></h4></a>
     </li>
 </ul>
 <div class="tab-content">
@@ -132,98 +132,65 @@
             <tbody>
             <tr>
                 <th scope="row">
-                    Обмен или возврат
+                    Отправлять почтой — это долго
                 </th>
                 <td>
-                    По закону косметические средства отосятся к товарам инидивидуального потребления и не
-                    подлежат возврату.
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Чье производство?
-                </th>
-                <td>
+                    У нас существуют и другие более быстрые способы доставки, в любой регион России мы можем доставить
+                    следующими способами:
                     <ul>
-                        <li>
-                            Мы продаем косметику фирм BMakeup (BM), 3CE, ТF.
-                        </li>
-                        <li>
-                            Часть косметики производится в Китае, часть в Европе, часть в России.
-                        </li>
-                        <li>
-                            Качество очень хорошее, тени и румяна не осыпаются, долго держатся, корректоры очень
-                            хорошо наносятся, имеют правильную консистенцию. Наша косметика лучше чем
-                            большинство популярных брендов продающихся в магазинах.
-                        </li>
-                        <li>
-                            По вашему желанию, мы можем вложить необходимые документы в ваш заказ или
-                            предоставить ссылки на Государственный реестр деклараций.
-                        </li>
+                        <li>ДОСТАВКА ПОЧТОЙ (Ускоренная доставка посылкой 1-го класса)</li>
+                        <li>КУРЬЕРСКАЯ ДОСТАВКА</li>
+                        <li>ДОСТАВКА В ПУНКТЫ ВЫДАЧИ ЗАКАЗОВ Boxberry</li>
                     </ul>
                 </td>
             </tr>
             <tr>
                 <th scope="row">
-                    Нет емейла
+                    Не могу определиться что добавить к заказу, чтобы поучавствовать в акции
                 </th>
                 <td>
-                    Указывайте емейл bababshop@yandex.ru
-                </td>
-                <th scope="row">
-                    Можно ли добавить/убрать что-то в заказ?
-                </th>
-                <td>
-                    Да, скажите мне, что вы хотите добавить/убрать, я внесу изменения в ваш заказ.<br/>
-                    <b>Далее записываем все изменения в отчет.</b>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Будет ли у меня подарок?
-                </th>
-                <td>
-                    Да, если сумма товаров в заказе больше 4000 руб.
+                    "Понимаю Вас, рекомендую Вам приобрести спонж-яичко, оно стоит всего …. рублей и согласитесь оно
+                    всегда пригодится?" <br>
+                    <b><em>Если не согласна, то можно предложить еще пару заготовленных товаров, в крайнем случае
+                        отпускаем
+                        выбирать:</em></b>
+                    Ну хорошо, я согласна, тяжело сделать выбор именно сейчас. "Имя клиента", в случае если Вам нужно
+                    время подумать, я могу перезвонить Вам немного позже. И у Вас как раз будет возможность просмотреть
+                    еще раз ассортимент на нашем сайте и сделать выбор. Вам будет удобно если я Вам позвоню через 2
+                    часа?
                 </td>
             </tr>
             <tr>
                 <th scope="row">
-                    Можно ли вскрыть посылку перед оплатой?
+                    Доставка — дорогая
                 </th>
                 <td>
-                    <b>(Если это ПВЗ или курьер)</b> <br/>
-                    Да, обязательно проверяйте содержимое вашего заказа перед оплатой.
+                    "Я правильно понимаю, что товар Вас полностью устраивает, смущает лишь то, что не расчитывали на
+                    дополнительную сумму за доставку?" <b>(ждет ответа)</b> <br>
+                    Имя, сейчас многие транспортные компании сотрудничают с магазинами и взимают оплату за оказанные
+                    услуги. <br>
+                    Поэтому стоимость доставки зависит не от нас - тарифы определяет транспортная компания и снизить их
+                    мы не можем. <br>
+                    При этом могу Вас заверить в том, что у нас одни из самых низких тарифов по доставке, что позволит
+                    Вам сэкономить и быстро получить Ваш заказ. <br>
+                    Оформляем заказ? В какой город отправляем?
                 </td>
             </tr>
             <tr>
                 <th scope="row">
-                    Можно ли отложить доставку?
+                    Вдруг обманете и ничего не пришлете, пришлете не то
                 </th>
                 <td>
-                    Да, скажите, после какого числа вам удобно будет получить заказ?<br/>
-                    <b>Далее записываем в отчет желаемую дату доставки</b>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Можно ли продлить срок ожидания на ПВЗ?
-                </th>
-                <td>
-                    Да, можно. Когда Вы сможете забрать?<br/>
-                    <b>Оператор пишет заявку на продление на электронную почту</b><br/>
-                    <ul>
-                        <li>d_polyakov@ural-press.ru</li>
-                        <li><b>в копию:</b> aeb@inbox.ru</li>
-                    </ul>
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><b>Тема письма:</b> "ИМ Баобаб. Номер заказа ХХХХХ. Срок
-                            хранения".
-                        </div>
-                        <div class="panel-body">
-                            <b>Текст письма:</b> "Здравствуйте, продлите пожалуйста срок хранения заказа ХХХХХ
-                            до ДАТА ДД.ММ. С уважением, оператор ФИО. ИМ Баобаб"
-                        </div>
-                    </div>
+                    Понимаю Ваши опасения. <br>
+                    Наш интернет магазин работает уже более 6 лет за это время мы хорошо зарекомендовали себя, о чем
+                    свидетельствуют положительные отзывы на разных площадках.<br>
+                    При сборке каждого заказа мы очень тщательно упаковываем товары, в несколько слоев пузырьковой
+                    пленки. <br>
+                    Если что-то вдруг повредится мы произведем Вам замену или компенсацию. <br>
+                    Мы максимально хорошо выполняем абсолютно все заказы и стремимся к тому, чтобы каждый наш покупатель
+                    становился постоянным. <br>
+                    В любом случае, при получении заказа курьером или в пункте выдачи у Вас будет возможность открыть
+                    коробку и проверить наличие и целостность товаров в заказе.
                 </td>
             </tr>
             </tbody>
@@ -278,6 +245,8 @@
                 <td>
                     Указывайте емейл bababshop@yandex.ru
                 </td>
+            </tr>
+            <tr>
                 <th scope="row">
                     Можно ли добавить/убрать что-то в заказ?
                 </th>
