--- a/Baobab/Baobab_script.html
+++ b/Baobab/Baobab_script.html
@@ -24,7 +24,8 @@
             <tbody>
             <tr>
                 <th scope="row">
-                    Здравствуйте, это интернет-магазин Баобаб. Меня зовут _____. Чем могу Вам помочь?
+                    Здравствуйте, это интернет-магазин Баобаб. <br>
+                    Меня зовут _____. Чем могу Вам помочь?
                 </th>
                 <td>
                     Я хотела бы оформить заказ на ______
@@ -48,7 +49,8 @@
             </tr>
             <tr>
                 <th scope="row">
-                    Добавляю к вашему заказу. Ирина, что-то ещё желаете добавить к вашему заказу?
+                    Добавляю к вашему заказу. <br>
+                    Ирина, что-то ещё желаете добавить к вашему заказу?
                 </th>
                 <td>
                     Да
@@ -56,9 +58,9 @@
             </tr>
             <tr>
                 <th scope="row">
-                    У нас сейчас проходит акция. При оформлении заказа на 4000 р. вы получаете набор из 2 корректоров
-                    шпионов и
-                    кисть в подарок. Желаете добавить к Вашему заказу спонж "яичко", либо другой товар на ваше
+                    У нас сейчас проходит акция. <br>
+                    При оформлении заказа на 4000 р. вы получаете набор из 2 корректоров шпионов и кисть в подарок. <br>
+                    Желаете добавить к Вашему заказу спонж "яичко", либо другой товар на ваше
                     усмотрение для
                     получения подарка?
                 </th>
@@ -68,7 +70,8 @@
             </tr>
             <tr>
                 <th scope="row">
-                    Трафареты и спонж добавлены к Вашему заказу. Общая сумма заказа 1997р. ЧТО-ТО ЕЩЕ?<br>
+                    Трафареты и спонж добавлены к Вашему заказу. <br>
+                    Общая сумма заказа 1997р. ЧТО-ТО ЕЩЕ?<br>
                     <em>Если да, то добавляем и снова спрашиваем "Что-то еще?". Если нет, то идем дальше</em>
                 </th>
                 <td>
@@ -77,9 +80,11 @@
             </tr>
             <tr>
                 <th scope="row">
-                    Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. По данному
+                    Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
+                    По данному
                     адресу
                     возможна доставка ______. *сверяем в ГД вкладки с доставкой (курьер и ПВЗ)<br>
+                    <br>
                     <em>Ссылку на профиль в VK при
                         оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
                 </th>
@@ -89,9 +94,11 @@
             </tr>
             <tr>
                 <th scope="row">
-                    Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. По данному
+                    Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
+                    По данному
                     адресу
                     возможна доставка ______. <br>
+                    <br>
                     <em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
                     <em>Ссылку на профиль в VK при
                         оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
@@ -110,10 +117,14 @@
             </tr>
             <tr>
                 <th scope="row">
-                    Оплата заказа при получении! Укажите ваш E-mail. Для отслеживания заказа и регистрации на сайте. Ваш
+                    Оплата заказа при получении! <br>
+                    Укажите ваш E-mail. Для отслеживания заказа и регистрации на сайте. <br>
+                    Ваш
                     пароль
                     будет 123123 <br>
-                    <em>Если клиент выбрал не оплату при получении, а другой способ - тогда спрашиваем как удобнее будет
+                    <br>
+                    <em>Если клиент выбрал не оплату при получении, а другой способ - <br>
+                        тогда спрашиваем как удобнее будет
                         оплатить и даем реквизиты для оплаты</em>. <br>
                     <em>Подробно о способах оплаты во вкладке "Оформление и оплата заказов"</em>
                 </th>
@@ -123,7 +134,8 @@
             </tr>
             <tr>
                 <th scope="row">
-                    Имя клиента" СПАСИБО, Ваш заказ оформлен. Сверим информацию______
+                    Имя клиента" СПАСИБО, Ваш заказ оформлен. <br>
+                    Сверим информацию______
                 </th>
                 <td>
                     Спасибо!
@@ -131,7 +143,8 @@
             </tr>
             <tr>
                 <th scope="row">
-                    Спасибо за выбор нашего интернет-магазина! Всего Вам доброго!
+                    Спасибо за выбор нашего интернет-магазина! <br>
+                    Всего Вам доброго!
                 </th>
                 <td>
                     ---
