--- a/Baobab/Baobab_script.html
+++ b/Baobab/Baobab_script.html
@@ -14,144 +14,120 @@
 </ul>
 <div class="tab-content">
     <div class="tab-pane fade in active" id="inScript">
-        <table class="table table-bordered">
-            <thead>
-            <tr>
-                <th scope="row">Оператор</th>
-                <th>Клиент</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">
-                    Здравствуйте, это интернет-магазин Баобаб. <br>
-                    Меня зовут _____. Чем могу Вам помочь?
-                </th>
-                <td>
-                    Я хотела бы оформить заказ на ______
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Подскажите, как вас зовут?
-                </th>
-                <td>
-                    Ирина
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Ирина, очень приятно. Что желаете заказать?
-                </th>
-                <td>
-                    Хочу Палитру декоративной косметики 78 цветов
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Добавляю к вашему заказу. <br>
-                    Ирина, что-то ещё желаете добавить к вашему заказу?
-                </th>
-                <td>
-                    Да
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    У нас сейчас проходит акция. <br>
-                    При оформлении заказа на 4000 р. вы получаете набор из 2 корректоров шпионов и кисть в подарок. <br>
-                    Желаете добавить к Вашему заказу спонж "яичко", либо другой товар на ваше
-                    усмотрение для
-                    получения подарка?
-                </th>
-                <td>
-                    Давайте спонж и трафареты для коррекции бровей.
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Трафареты и спонж добавлены к Вашему заказу. <br>
-                    Общая сумма заказа 1997р. ЧТО-ТО ЕЩЕ?<br>
-                    <em>Если да, то добавляем и снова спрашиваем "Что-то еще?". Если нет, то идем дальше</em>
-                </th>
-                <td>
-                    ---
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
-                    По данному
-                    адресу
-                    возможна доставка ______. *сверяем в ГД вкладки с доставкой (курьер и ПВЗ)<br>
-                    <br>
-                    <em>Ссылку на профиль в VK при
-                        оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
-                </th>
-                <td>
-                    ---
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
-                    По данному
-                    адресу
-                    возможна доставка ______. <br>
-                    <br>
-                    <em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
-                    <em>Ссылку на профиль в VK при
-                        оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
-                </th>
-                <td>
-                    ---
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Стоимость доставки _______. Доставлен будет через______-
-                </th>
-                <td>
-                    ---
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Оплата заказа при получении! <br>
-                    Укажите ваш E-mail. Для отслеживания заказа и регистрации на сайте. <br>
-                    Ваш
-                    пароль
-                    будет 123123 <br>
-                    <br>
-                    <em>Если клиент выбрал не оплату при получении, а другой способ - <br>
-                        тогда спрашиваем как удобнее будет
-                        оплатить и даем реквизиты для оплаты</em>. <br>
-                    <em>Подробно о способах оплаты во вкладке "Оформление и оплата заказов"</em>
-                </th>
-                <td>
-                    ---
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Имя клиента" СПАСИБО, Ваш заказ оформлен. <br>
-                    Сверим информацию______
-                </th>
-                <td>
-                    Спасибо!
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">
-                    Спасибо за выбор нашего интернет-магазина! <br>
-                    Всего Вам доброго!
-                </th>
-                <td>
-                    ---
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Здравствуйте, это интернет-магазин Баобаб. <br>
+                Меня зовут _____. Чем могу Вам помочь?
+            </div>
+            <div class="panel-body">
+                Я хотела бы оформить заказ на ______
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Подскажите, как вас зовут?
+            </div>
+            <div class="panel-body">
+                Ирина
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Ирина, очень приятно. Что желаете заказать?
+            </div>
+            <div class="panel-body">
+                Хочу Палитру декоративной косметики 78 цветов
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Добавляю к вашему заказу. <br>
+                Ирина, что-то ещё желаете добавить к вашему заказу?
+            </div>
+            <div class="panel-body">
+                Да
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                У нас сейчас проходит акция. <br>
+                При оформлении заказа на 4000 р. вы получаете набор из 2 корректоров шпионов и кисть в подарок. <br>
+                Желаете добавить к Вашему заказу спонж "яичко", либо другой товар на ваше
+                усмотрение для
+                получения подарка?
+            </div>
+            <div class="panel-body">
+                Давайте спонж и трафареты для коррекции бровей.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Трафареты и спонж добавлены к Вашему заказу. <br>
+                Общая сумма заказа 1997р. ЧТО-ТО ЕЩЕ?<br>
+            </div>
+            <div class="panel-body">
+                <em>Если да, то добавляем и снова спрашиваем "Что-то еще?". Если нет, то идем дальше</em>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
+                По данному
+                адресу
+                возможна доставка ______.
+            </div>
+            <div class="panel-body">
+                <em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
+                <br>
+                <em>Ссылку на профиль в VK при
+                    оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
+                По данному адресу возможна доставка ______. <br>
+            </div>
+            <div class="panel-body">
+                <em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
+                <br>
+                <em>Ссылку на профиль в VK при
+                    оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Стоимость доставки _______. Доставлен будет через______ <br>
+                Оплата заказа при получении! <br>
+                Укажите ваш E-mail. Для отслеживания заказа и регистрации на сайте. <br>
+                Ваш пароль будет 123123 <br>
+            </div>
+            <div class="panel-body">
+                <em>Если клиент выбрал не оплату при получении, а другой способ - <br>
+                    тогда спрашиваем как удобнее будет
+                    оплатить и даем реквизиты для оплаты</em>. <br>
+                <br>
+                <em>Подробно о способах оплаты во вкладке "Оформление и оплата заказов"</em>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Имя клиента" СПАСИБО, Ваш заказ оформлен. <br>
+                Сверим информацию______
+            </div>
+            <div class="panel-body">
+                Спасибо
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Спасибо за выбор нашего интернет-магазина! <br>
+                Всего Вам доброго!
+            </div>
+            <div class="panel-body">
+                ---
+            </div>
+        </div>
     </div>
     <div class="tab-pane fade" id="exceptions">
         <table class="table table-striped table-bordered">
