--- a/Baobab/Baobab_script.html
+++ b/Baobab/Baobab_script.html
@@ -14,118 +14,118 @@
 </ul>
 <div class="tab-content">
     <div class="tab-pane fade in active" id="inScript">
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Здравствуйте, это интернет-магазин Баобаб. <br>
-                Меня зовут _____. Чем могу Вам помочь?
+                <h4>Здравствуйте, это интернет-магазин Баобаб. <br>
+                    Меня зовут _____. Чем могу Вам помочь?</h4>
             </div>
             <div class="panel-body">
-                Я хотела бы оформить заказ на ______
+                <h6>Я хотела бы оформить заказ на ______</h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Подскажите, как вас зовут?
+                <h4>Подскажите, как вас зовут?</h4>
             </div>
             <div class="panel-body">
-                Ирина
+                <h6>Ирина</h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Ирина, очень приятно. Что желаете заказать?
+                <h4>Ирина, очень приятно. Что желаете заказать?</h4>
             </div>
             <div class="panel-body">
-                Хочу Палитру декоративной косметики 78 цветов
+                <h6>Хочу Палитру декоративной косметики 78 цветов</h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Добавляю к вашему заказу. <br>
-                Ирина, что-то ещё желаете добавить к вашему заказу?
+                <h4>Добавляю к вашему заказу. <br>
+                    Ирина, что-то ещё желаете добавить к вашему заказу?</h4>
             </div>
             <div class="panel-body">
-                Да
+                <h6>Да</h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                У нас сейчас проходит акция. <br>
-                При оформлении заказа на 4000 р. вы получаете набор из 2 корректоров шпионов и кисть в подарок. <br>
-                Желаете добавить к Вашему заказу спонж "яичко", либо другой товар на ваше
-                усмотрение для
-                получения подарка?
+                <h4>У нас сейчас проходит акция. <br>
+                    При оформлении заказа на 4000 р. вы получаете набор из 2 корректоров шпионов и кисть в подарок. <br>
+                    Желаете добавить к Вашему заказу спонж "яичко", либо другой товар на ваше
+                    усмотрение для
+                    получения подарка?</h4>
             </div>
             <div class="panel-body">
-                Давайте спонж и трафареты для коррекции бровей.
+                <h6>Давайте спонж и трафареты для коррекции бровей.</h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Трафареты и спонж добавлены к Вашему заказу. <br>
-                Общая сумма заказа 1997р. ЧТО-ТО ЕЩЕ?<br>
+                <h4>Трафареты и спонж добавлены к Вашему заказу. <br>
+                    Общая сумма заказа 1997р. ЧТО-ТО ЕЩЕ?<br></h4>
             </div>
             <div class="panel-body">
-                <em>Если да, то добавляем и снова спрашиваем "Что-то еще?". Если нет, то идем дальше</em>
+                <h6><em>Если да, то добавляем и снова спрашиваем "Что-то еще?". Если нет, то идем дальше</em></h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
-                По данному
-                адресу
-                возможна доставка ______.
+                <h4>Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
+                    По данному
+                    адресу
+                    возможна доставка ______.</h4>
             </div>
             <div class="panel-body">
-                <em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
-                <br>
-                <em>Ссылку на профиль в VK при
-                    оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
+                <h6><em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
+                    <br>
+                    <em>Ссылку на профиль в VK при
+                        оформлении по телефону спрашивать не нужно. Ставьте прочерк</em></h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
-                По данному адресу возможна доставка ______. <br>
+                <h4> Уточните Ваши ФИО, город, адрес, регион,почтовый индекс(если почта) и номер телефона. <br>
+                    По данному адресу возможна доставка ______. <br></h4>
             </div>
             <div class="panel-body">
-                <em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
-                <br>
-                <em>Ссылку на профиль в VK при
-                    оформлении по телефону спрашивать не нужно. Ставьте прочерк</em>
+                <h6><em>сверяем в ГД вкладки с доставкой (курьер и ПВЗ)</em><br>
+                    <br>
+                    <em>Ссылку на профиль в VK при
+                        оформлении по телефону спрашивать не нужно. Ставьте прочерк</em></h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Стоимость доставки _______. Доставлен будет через______ <br>
-                Оплата заказа при получении! <br>
-                Укажите ваш E-mail. Для отслеживания заказа и регистрации на сайте. <br>
-                Ваш пароль будет 123123 <br>
+                <h4>Стоимость доставки _______. Доставлен будет через______ <br>
+                    Оплата заказа при получении! <br>
+                    Укажите ваш E-mail. Для отслеживания заказа и регистрации на сайте. <br>
+                    Ваш пароль будет 123123 <br></h4>
             </div>
             <div class="panel-body">
-                <em>Если клиент выбрал не оплату при получении, а другой способ - <br>
+                <h6><em>Если клиент выбрал не оплату при получении, а другой способ - <br>
                     тогда спрашиваем как удобнее будет
                     оплатить и даем реквизиты для оплаты</em>. <br>
-                <br>
-                <em>Подробно о способах оплаты во вкладке "Оформление и оплата заказов"</em>
+                    <br>
+                    <em>Подробно о способах оплаты во вкладке "Оформление и оплата заказов"</em></h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Имя клиента" СПАСИБО, Ваш заказ оформлен. <br>
-                Сверим информацию______
+                <h4> Имя клиента" СПАСИБО, Ваш заказ оформлен. <br>
+                    Сверим информацию______</h4>
             </div>
             <div class="panel-body">
-                Спасибо
+                <h6>Спасибо</h6>
             </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-                Спасибо за выбор нашего интернет-магазина! <br>
-                Всего Вам доброго!
+                <h4>Спасибо за выбор нашего интернет-магазина! <br>
+                    Всего Вам доброго!</h4>
             </div>
             <div class="panel-body">
-                ---
+                <h6>---</h6>
             </div>
         </div>
     </div>
